<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditProfile">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/header_layout" android:background="@color/colorUAMC">
        <Button
                android:text="@string/back_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/back_button" android:layout_weight=".1"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        <TextView
                android:text="@string/editProfile_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/activity_text" android:layout_weight="24"
                android:textSize="24sp" android:textStyle="bold" android:gravity="center"/>
        <Button
                android:text="@string/saveChanges_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/save_button" android:layout_weight=".1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@android:color/secondary_text_light"/>
    </LinearLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:background="@color/colorBgUAMC">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/child_scrollView">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars[14]"
                    android:id="@+id/user_photo" android:layout_gravity="center"/>
            <Button
                    android:text="@string/changeProfilePhoto_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/changeProfilePhoto"
                    android:layout_gravity="center"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/userName_label"
                    android:text="@string/name_label"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/userName_editText"/>
            <TextView
                    android:text="@string/userName_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/nickName_label"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/nickName_editText"/>
            <TextView
                    android:text="@string/email_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/email_label"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/email_editText"/>
            <TextView
                    android:text="@string/password_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/password_label"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/password_editText"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>