<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PostSololution" android:id="@+id/main_layout" android:orientation="vertical">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/header_layout" android:background="@color/colorUAMC">
        <Button
                android:text="@string/back_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/back_button" android:layout_weight="3"
                style="@style/Widget.AppCompat.Button.Borderless" android:textColor="@color/colorBgUAMC"
                android:textStyle="bold" android:textAlignment="center"/>
        <TextView
                android:text="@string/challengeSolution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/ChallengeTittle_text" android:layout_weight="12"
                android:textColor="@color/lightPrimary" android:textSize="24sp"
                android:layout_marginVertical="10dp" style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textAlignment="viewStart" android:textAllCaps="false" android:ems="9"/>
        <Button
                android:text="@string/post_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/next_button" android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless" android:textColor="@color/colorBgUAMC"
                android:textAlignment="textEnd" android:textSize="14sp" android:ems="7"/>
    </LinearLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/child_scrollview">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/warning_post_solution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/warning_text" android:textSize="18sp"
                    android:textStyle="bold|italic" android:layout_marginStart="20dp" android:layout_marginEnd="20dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:lines="20"
                    android:gravity="start|top"
                    android:ems="10"
                    android:id="@+id/solution_text" android:hint="@string/hint_solution_teacher"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>