<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:gravity="clip_horizontal|center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".signup"
        android:orientation="vertical"
        android:id="@+id/main_layout">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrolling"
            android:layout_gravity="center"
    >
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:context=".signup"
                android:orientation="vertical"
                android:id="@+id/second_layout" android:layout_gravity="center_horizontal">
            <ImageView
                    android:layout_width="265dp"
                    android:layout_height="50dp" app:srcCompat="@drawable/praxis_letras_bold"
                    android:id="@+id/logo_words"
                    android:contentDescription="@string/logo_contentDescription"
                    android:layout_marginBottom="50dp" android:layout_marginTop="50dp" android:layout_gravity="center"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/box_layout"
                    android:background="@color/lightPrimaryDark" android:paddingHorizontal="15dp"
                    android:layout_marginBottom="50dp">
                <LinearLayout
                        android:orientation="horizontal" android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/carpeteo">
                    <Button
                            android:text="@string/login_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/to_login_button"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:background="@color/lightPrimaryDark" android:textColor="@color/lightSecondary"
                            android:layout_weight="1"/>
                    <Button
                            android:text="@string/signup_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/to_signup_button"
                            android:background="@color/lightSecondary"
                            android:textColor="@color/lightPrimary"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_weight="1"/>
                </LinearLayout>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions|textPersonName"
                        android:ems="10"
                        android:id="@+id/user_name_signup" android:hint="@string/hint_nickName"
                        android:layout_marginHorizontal="5dp" android:layout_marginVertical="15dp"
                        android:autofillHints="@string/empty"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions|textPersonName"
                        android:ems="10"
                        android:id="@+id/full_name" android:hint="@string/name_label"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginVertical="15dp" android:autofillHints="@string/empty"/>
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:passwordToggleEnabled="true">
                    <android.support.design.widget.TextInputEditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:ems="10"
                            android:id="@+id/password_signup" android:hint="@string/hint_password"
                            android:layout_marginHorizontal="5dp" android:layout_marginVertical="15dp"
                            android:autofillHints="@string/empty"/>
                </android.support.design.widget.TextInputLayout>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions|textEmailAddress"
                        android:ems="10"
                        android:id="@+id/email_signup" android:hint="@string/email_label"
                        android:layout_marginHorizontal="5dp" android:layout_marginVertical="15dp"
                        android:autofillHints="@string/empty"/>
                <TextView
                        android:text="o "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/or_text" android:textSize="24sp"
                        android:textAlignment="center" android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp" android:layout_gravity="center"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/socialMedia_box">
                    <Button
                            android:text="FaceBook"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/facebook_signup_button"
                            android:layout_weight="1" android:background="@color/colorFacebook"
                            android:layout_margin="15dp"
                            android:textColor="@color/trueWhite"
                            style="@style/Base.Widget.AppCompat.Button.Borderless"/>
                    <Button
                            android:text="gmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/gmail_signup_button"
                            android:layout_weight="1"
                            android:background="@color/colorGMail" android:layout_margin="15dp"
                            android:textColor="@color/trueWhite" style="@style/Widget.AppCompat.Button.Borderless"/>
                </LinearLayout>
                <Button
                        android:text="@string/accept_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/email_signup_button"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="15dp" android:layout_marginRight="15dp"
                        style="@style/Widget.AppCompat.Button.Borderless" android:textColor="@color/lightSecondary"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
